--- a/index.html
+++ b/index.html
@@ -1022,6 +1022,17 @@
                     <p><strong>Ready to connect?</strong></p>
                     <p>📞 Call (919) 335-3723 • 💬 Text "CONNECT"</p>
                     <p>📍 Tampa, FL • Coach E. Bell | The 360° Coach™</p>
+                    <div style="margin-top: 2rem; display: flex; justify-content: center; gap: 2rem; flex-wrap: wrap;">
+                        <a href="https://www.linkedin.com/in/lebell" target="_blank" style="color: white; text-decoration: none; opacity: 0.8; transition: opacity 0.3s;">
+                            💼 LinkedIn
+                        </a>
+                        <a href="https://www.facebook.com/Players-Development-Club-PDC-103273078803797/" target="_blank" style="color: white; text-decoration: none; opacity: 0.8; transition: opacity 0.3s;">
+                            📘 Facebook
+                        </a>
+                        <a href="https://www.instagram.com/pdc_hoops/" target="_blank" style="color: white; text-decoration: none; opacity: 0.8; transition: opacity 0.3s;">
+                            📸 Instagram
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
