--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@
                         <li>Safe, comfortable environment</li>
                         <li>All fitness levels welcome</li>
                     </ul>
-                    <a href="https://calendly.com/playersdevelopmentclub/30min" target="_blank" class="pricing-button">Book Single Walk</a>
+                    <a href="https://buy.stripe.com/aFa28t9VkgDG6N28yv9IQ00" target="_blank" class="pricing-button">Book Single Walk</a>
                 </div>
                 <div class="pricing-card featured animate-on-scroll">
                     <h3>Monthly Connection</h3>
@@ -955,7 +955,7 @@
                         <li>Community access</li>
                         <li>Save $10 per month</li>
                     </ul>
-                    <a href="https://buy.stripe.com/aFa28t9VkgDG6N28yv9IQ00" target="_blank" class="pricing-button">Start Monthly Plan</a>
+                    <a href="https://buy.stripe.com/9B628t8Rgbjmdbq7ur9IQ04" target="_blank" class="pricing-button">Start Monthly Plan</a>
                 </div>
                 <div class="pricing-card animate-on-scroll">
                     <h3>Founding Partner</h3>
@@ -969,7 +969,7 @@
                         <li>Locked-in pricing</li>
                         <li>Limited to first 10 partners</li>
                     </ul>
-                    <a href="https://buy.stripe.com/aFa28t9VkgDG6N28yv9IQ00" target="_blank" class="pricing-button">Join Founding Partners</a>
+                    <a href="https://buy.stripe.com/4gM9AVc3s1IM4EU1639IQ05" target="_blank" class="pricing-button">Join Founding Partners</a>
                 </div>
             </div>
         </div>
